# yolo_family_with_deploy

./: .gitignore  2.0.6  8.2.34  readme.md
YOLO_BOOK/YOLO_Tutorial/: README.md  Untitled-1.ipynb  engine.py  train.py
YOLO_BOOK/YOLO_Tutorial/dataset/: apple37.py  build.py  ourdataset2.py
YOLO_BOOK/YOLO_Tutorial/evaluator/: apple37_evaluator.py  (+2 more)
datasets/jingye/: flysteel_jingye.yaml
scripts_jupyter/: common.py  ss.py
yolov11/: .gitignore
yolov11/case_tasks/: best_hyperparameters.yaml  c2_det_detect_export.py  c2_det_detect_train.py  check_dataset.py  detect_export.py  detect_infer.py  detect_predict.py  detect_train.py  detect_train_remote.py  detect_train_tune_remote.py  detect_val.py  readme.md  scripts_train.sh  scripts_train_tune.sh  seg_train.py  test.py  test2.py
yolov5_7.0/: .gitignore  =8.2.34  README.md  detect.py  export.py  export_standard_comments.py  keshan0903.py  requirements beifen.txt  requirements copy.txt  requirements.txt  scripts_evolve.sh  scripts_train.sh  train.py  train_comments.py  train_evolve.py  train_little.py  train_local.py  train_mmodel.py  train_raytune.py  train_raytune_copy.py  val.py
yolov5_7.0/classify/: train.py
yolov5_7.0/data/: Apple_3_7.yaml  rtcs.yaml
yolov5_7.0/models/: yolo.py
yolov5_7.0/segment/: train.py
yolov5_7.0/utils/: augmentations.py  autobatch.py  callbacks.py  dataloaders.py  general.py  loss.py  loss_comments.py  metrics.py  torch_utils.py
yolov5_cpp_deploy/: CMakeLists.txt
yolov5_cpp_deploy/src/foundation_alg/: CMakeLists.txt  implfoundation.cpp  implfoundation.h  yolov5.cpp  yolov5.hpp
(+80 files in other folders)
